[package]
name = "garfield"
version = "0.1.0"
authors = ["Valdemar Erk <valdemar@erk.io>"]

[dependencies]
chrono = "0.4"
kankyo = "0.1.1"
log = "0.4.0"
env_logger = "0.5.2"
rand = "0.4"

[dependencies.serenity]
git = "https://github.com/Lakelezz/serenity.git"
branch = "master"
features = ["framework", "standard_framework"]
